# Job-Level-Framework

./: README.md
src/: AlgorithmInterface.h  Application.cpp  Application.h  Arguments.cpp  Arguments.h  AsyncSocket.cpp  AsyncSocket.h  BaseBfsAlgorithm.cpp  BaseBfsAlgorithm.h  BaseBfsHandler.cpp  BaseBfsHandler.h  BaseConfigure.h  BaseData.cpp  BaseData.h  BaseGameHandler.cpp  BaseGameHandler.h  BaseJMsgParser.cpp  BaseJMsgParser.h  BaseMove.h  BfsData.cpp  BfsData.h  BfsHandler.cpp  BfsHandler.h  BfsInterface.h  BfsRetriever.h  BrokerAgent.cpp  BrokerAgent.h  CMakeLists.txt  CgiHandler.cpp  CgiHandler.h  CgiParser.cpp  CgiParser.h  CgiUctRetriever.cpp  CgiUctRetriever.h  CommandsEngine.cpp  CommandsEngine.h  CommonBfJlModules.cpp  CommonBfJlModules.h  ConfigureLoader.cpp  ConfigureLoader.h  (+60 more)
src/cmake_module/: FindReadline.cmake
src/include/libCGDG/client/: AskInfoData.h  BrokerAgent.h  BrokerAgentExtension.h  ClientCommandFactory.h  CompositeType.h  HandlerInterface.h  InitUserData.h  JAssignDoneData.h  JDoneData.h  JDropData.h  JNextData.h  JSubmitAckData.h  JSubmitData.h  JobHandlerInterface.h  JobManager.h  JobOperationInterfaceExtension.h  NewUserData.h  OperationInterface.h  OperationInterfaceExtension.h  RejectUserData.h  WInfoData.h  WLostData.h  WSelectAckData.h  WSelectData.h  WorkerManager.h
src/include/libCGDG/common/: AbstractCommandFactory.h  BaseBrokerAgent.h  Command.h  CommandData.h  ConnectConfig.h  ConnectHelper.h  EndTemplate.h  ExitData.h  HandlerInterface.h  HeartBeatData.h  InitConnectData.h  JAbortAckData.h  JAbortData.h  JDoingData.h  JFailData.h  JInData.h  JMsgData.h  Logger.h  NewConnectData.h  NewUserCommand.h  NonblockingIOInterface.h  SocketFactoryInterface.h  SocketInterface.h  UnknownData.h
src/include/libCGDG/worker/: BrokerAgent.h  BrokerAgentExtension.h  HandlerInterface.h  InitDaemonData.h  InitWorkerData.h  JAssignData.h  JDoneData.h  JSetCoreAckData.h  JSetCoreData.h  NewWorkerData.h  OperationInterface.h  UpdateWorkerAckData.h  UpdateWorkerData.h  WAliveData.h  WSleepData.h  WWakeUpData.h  WorkerCommandFactory.h
